--- a/DotNETWork.csproj
+++ b/DotNETWork.csproj
@@ -41,17 +41,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Globals\ASCIIProgressbar.cs" />
     <Compile Include="Globals\Extension.cs" />
+    <Compile Include="Security\DotRijndaelDecryption.cs" />
+    <Compile Include="Security\RijndaelEncryption.cs" />
     <Compile Include="Tcp\IClient.cs" />
     <Compile Include="Globals\Utilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tcp\DotTcpClient.cs" />
     <Compile Include="Tcp\DotTcpServer.cs" />
+    <Compile Include="Udp\ACK\DotUdpReceiverOrdered.cs" />
+    <Compile Include="Udp\ACK\DotUdpSenderOrdered.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Security\" />
     <Folder Include="Tcp\Web\" />
-    <Folder Include="Udp\ACK\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
