--- a/DotNETWork.csproj
+++ b/DotNETWork.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DotNETWork</RootNamespace>
     <AssemblyName>DotNETWork</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -22,8 +23,9 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x64</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <UseVSHostingProcess>true</UseVSHostingProcess>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -33,6 +35,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject />
@@ -52,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DotTcpException.cs" />
     <Compile Include="Globals\ASCIIProgressbar.cs" />
     <Compile Include="Globals\Extension.cs" />
     <Compile Include="Security\DotRijndaelDecryption.cs" />
@@ -61,8 +65,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tcp\DotTcpClient.cs" />
     <Compile Include="Tcp\DotTcpServer.cs" />
+    <Compile Include="Tcp\P2P\Client.cs" />
+    <Compile Include="Tcp\P2P\Mediator.cs" />
+    <Compile Include="Tcp\P2P\Peer.cs" />
     <Compile Include="Udp\ACK\DotUdpReceiverOrdered.cs" />
     <Compile Include="Udp\ACK\DotUdpSenderOrdered.cs" />
+    <Compile Include="UserException.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Tcp\Web\" />
